--- a/Réplica de uma versão do site do Spotify/css/estilo.css
+++ b/Réplica de uma versão do site do Spotify/css/estilo.css
@@ -1,5 +1,4 @@
 html, body, #home {
-	height: 100%;
 	overflow-x: hidden;
 }
 
@@ -56,6 +55,10 @@ nav.navbar-transparente {
 
 .tela1 {
 	text-align: center;
+	height: 600px;
+	align-items: center;
+	justify-content: center;
+	display: flex;
 }
 
 .btn-custom {
@@ -87,7 +90,8 @@ nav.navbar-transparente {
 }
 
 .carousel-control-next, .carousel-control-prev {
-	width: 5%;
+	padding-top: 70px;
+	width: 0%;
 }
 
 .caixa {
@@ -163,6 +167,9 @@ footer ul li {
 		margin: 10px 15px;
 		font-size: 1em;
 	}
+	.rotacionar{
+		display:none;
+	}
 }
 
 @media (min-width: 576px) and (max-width: 767.98px) {
@@ -171,6 +178,9 @@ footer ul li {
 	}
 	.btn-custom {
 		margin: 10px 15px;
+	}
+	.rotacionar{
+		display:none;
 	}
 }
 
